# SFMLTest

./: CMakeLists.txt  README.md
src/: .CMakeLists.txt.swp  CMakeLists.txt  sfml.cpp
